--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 10px;
 }
 .form input {
   font-family: "Roboto", sans-serif;
@@ -26,6 +27,7 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  border-radius: 10px;
 }
 .form button {
   font-family: "Roboto", sans-serif;
@@ -40,6 +42,7 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+  border-radius: 10px;
 }
 .form button:hover,.form button:active,.form button:focus {
   background: #43A047;
@@ -98,4 +101,21 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
+}
+
+.msg{
+  text-align: center;
+  margin-bottom: 15px;
+  padding: 0.5px;
+  border-radius: 10px;
+  background-color: #fabdbd;
+  color: red;
+  display: none;
+
+}
+
+.titulo-form{
+  font-size: 20pt;
+  font-family: "Roboto", sans-serif;
+
 }
