alterações de design

--- a/login/style.css
+++ b/login/style.css
@@ -15,7 +15,7 @@
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   border-radius: 10px;
-}
+} 
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
@@ -33,7 +33,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #0077ff;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -45,7 +45,7 @@
   border-radius: 10px;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #00d9ff;
 }
 .form .message {
   margin: 15px 0 0;
@@ -53,7 +53,7 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #0077ff;
   text-decoration: none;
 }
 .form .register-form {
@@ -93,11 +93,11 @@
   color: #EF3B3A;
 }
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: #0077ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(right, #0077ff, #00d9ff);
+  background: -moz-linear-gradient(right, #0077ff, #00d9ff);
+  background: -o-linear-gradient(right, #0077ff, #00d9ff);
+  background: linear-gradient(to left, #0077ff, #00d9ff);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
