--- a/cadastro/style.css
+++ b/cadastro/style.css
@@ -33,7 +33,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #0077ff;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -45,7 +45,7 @@
   border-radius: 10px;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #00d9ff;
 }
 .form .message {
   margin: 15px 0 0;
@@ -53,7 +53,7 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #0077ff;
   text-decoration: none;
 }
 .form .register-form {
@@ -94,10 +94,10 @@
 }
 body {
   background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: -webkit-linear-gradient(right, #0077ff, #00d9ff);
+  background: -moz-linear-gradient(right, #0077ff, #00d9ff);
+  background: -o-linear-gradient(right, #0077ff, #00d9ff);
+  background: linear-gradient(to left, #0077ff, #00d9ff);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
